# PropManagementServices

./: .gitignore  README.md  docker-compose.yml
.claude/: launch.json
.claude/skills/dotnet-ntier-service/: SKILL.md
db/: baseline-existing-db.sql
db/init/: 01-schema.sql  02-seed-data.sql
src/AuthService/: AuthService.sln
src/AuthService/AuthService.Api/: AuthService.Api.csproj  AuthService.Api.http  Dockerfile  Program.cs  appsettings.json
src/AuthService/AuthService.Business/: AccountService.cs  AuthRoles.cs  AuthService.Business.csproj  DatabaseStartup.cs  JwtOptions.cs  ServiceCollectionExtensions.cs  ServiceResult.cs
src/AuthService/AuthService.DataAccess/: AuthDbContext.cs  AuthDbContextFactory.cs  AuthService.DataAccess.csproj  DatabaseInitializer.cs  IAuditLogRepository.cs  IRefreshTokenRepository.cs  ServiceCollectionExtensions.cs
src/AuthService/AuthService.Models/: ApplicationUser.cs  AuditLog.cs  AuthService.Models.csproj  RefreshToken.cs  Roles.cs
src/DealsService/: DealsService.sln
src/DealsService/DealsService.Api/: DealsService.Api.csproj  DealsService.Api.http  Dockerfile  Program.cs  (+1 more)
src/DocumentsService/: DocumentsService.sln
src/IngestionService/: Dockerfile  IngestionService.http  pyproject.toml
src/IngestionService/app/: api.py  auth.py  chunking.py  config.py  db.py  embeddings.py  kafka_io.py  main.py  parsing.py  pipeline.py  storage.py
src/IngestionService/ingestion_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/IngestionService/litellm/: config.yaml
src/ListingsService/: ListingsService.sln
(+181 files in other folders)
