[project]
name = "ingestion-service"
version = "0.1.0"
description = "PropTrack document ingestion: Docling parsing, chunking, LiteLLM embeddings, pgvector store (architecture v1.1 §2.5)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-settings>=2.4",
    "confluent-kafka>=2.5",
    "boto3>=1.34",
    "docling>=2.14",
    "langchain-text-splitters>=0.3",
    "tiktoken>=0.8",
    "openai>=1.50",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "PyJWT[crypto]>=2.9",
    "httpx>=0.27",
]

# No uv.lock committed yet: the local machine has no uv/Python 3.12, so the
# resolve happens at image build. Generate a lock inside the container later
# for reproducibility (docker run --rm -v $PWD:/w -w /w ghcr.io/astral-sh/uv uv lock).

[tool.setuptools.packages.find]
# litellm/ (proxy config, no __init__.py) sits alongside app/ at this level and
# isn't a package — without this, setuptools' flat-layout discovery refuses to guess.
include = ["app*"]
